--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,7 +4,7 @@
 name: CMake on multiple platforms
 on:
     push:
-        branches: ["develop"]
+        branches: ["develop", "main"]
         paths:
             - "**.cpp"
             - "**.hpp"
