--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,4 +4,5 @@ SET(SOURCES ${SOURCES} ${BASE_DIR}/src/colors.cpp
                        ${BASE_DIR}/src/platform.cpp
                        ${BASE_DIR}/src/window.cpp
                        ${BASE_DIR}/src/elements/table.cpp
+                       ${BASE_DIR}/src/elements/editingModal.cpp
                        ${BASE_DIR}/src/logging.cpp PARENT_SCOPE)
