--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "ImGui"]
 	path = imgui
-	url = https://github.com/ZCG-coder/imgui.git
+	url = https://github.com/ocornut/imgui.git
 	branch = docking
