--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ SET(SOURCES ${SOURCES} ${BASE_DIR}/src/colors.cpp
                        ${BASE_DIR}/src/gui.cpp
                        ${BASE_DIR}/src/platform.cpp
                        ${BASE_DIR}/src/window.cpp
+                       ${BASE_DIR}/src/store/day.cpp
                        ${BASE_DIR}/src/elements/table.cpp
                        ${BASE_DIR}/src/elements/editingModal.cpp
                        ${BASE_DIR}/src/logging.cpp PARENT_SCOPE)
