Added calendar view.

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -92,5 +92,5 @@ jobs:
             - name: Set up Python
               uses: actions/setup-python@v5
               with:
-                cache: 'pip'
+                # cache: 'pip'
                 python-version: ${{ matrix.python_version }}
